options add post @string's aangemaakt

--- a/app/src/main/res/layout/menu_homescherm.xml
+++ b/app/src/main/res/layout/menu_homescherm.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/img_wolkenkrabber"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:contentDescription="@string/wolkenkrabber"
+                android:contentDescription="@string/skyscraper"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toTopOf="@id/lbl_wolkenkrabber"
                 app:layout_constraintEnd_toStartOf="@id/img_cinema"
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:text="@string/wolkenkrabber"
+                android:text="@string/skyscraper"
                 app:layout_constraintBottom_toTopOf="@id/img_schatkist"
                 app:layout_constraintEnd_toStartOf="@id/lbl_cinema"
                 app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
                 android:id="@+id/img_schatkist"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:contentDescription="@string/schatkist"
+                android:contentDescription="@string/treasure_chest"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toTopOf="@id/lbl_schatkist"
                 app:layout_constraintEnd_toStartOf="@id/img_musicRoom"
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:text="@string/schatkist"
+                android:text="@string/treasure_chest"
                 app:layout_constraintBottom_toTopOf="@id/img_rugzak"
                 app:layout_constraintEnd_toStartOf="@id/lbl_musicRoom"
                 app:layout_constraintStart_toStartOf="parent"
