--- a/app/src/main/res/layout/bulletinboard.xml
+++ b/app/src/main/res/layout/bulletinboard.xml
@@ -30,7 +30,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="top"
         android:orientation="vertical">
 
@@ -42,7 +42,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text="@string/request_consultation_button" />
+            android:text="@string/request_consultation" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -126,9 +126,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_margin="10dp"
             app:cardElevation="10dp"
             app:layout_constraintBottom_toBottomOf="parent">
 
