--- a/app/src/main/res/layout/aanvraag_gesprek.xml
+++ b/app/src/main/res/layout/aanvraag_gesprek.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.example.faithandroid.AanvraagGesprekFragment">
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
