--- a/app/src/main/res/layout/inloggen_jongeren.xml
+++ b/app/src/main/res/layout/inloggen_jongeren.xml
@@ -5,6 +5,6 @@
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.example.faithandroid.MainActivity">
 
 </androidx.drawerlayout.widget.DrawerLayout>
