--- a/app/src/main/res/layout/fragment_bulletinboard.xml
+++ b/app/src/main/res/layout/fragment_bulletinboard.xml
@@ -5,7 +5,7 @@
     android:id="@+id/backheader"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.faithandroid.BulletinBoardFragment"
+    tools:context="com.example.faithandroid.BulletinboardFragment"
     >
 
 <RelativeLayout
