--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,17 +7,32 @@
 
     <fragment
         android:id="@+id/bulletinBoardFragment"
-        android:name="com.example.faithandroid.BulletinBoardFragment"
+        android:name="com.example.faithandroid.BulletinboardFragment"
         android:label="bulletinboard"
-        tools:layout="@layout/bulletinboard" />
+        tools:layout="@layout/fragment_bulletinboard" >
+        <action
+            android:id="@+id/action_bulletinBoardFragment_to_aanvraagGesprekFragment"
+            app:destination="@id/aanvraagGesprekFragment" />
+        <action
+            android:id="@+id/action_bulletinBoardFragment_to_optionsAddPostFragment"
+            app:destination="@id/optionsAddPostFragment" />
+    </fragment>
     <fragment
         android:id="@+id/optionsAddPostFragment"
         android:name="com.example.faithandroid.OptionsAddPostFragment"
         android:label="options_add_post"
-        tools:layout="@layout/options_add_post" />
+        tools:layout="@layout/options_add_post" >
+        <action
+            android:id="@+id/action_optionsAddPostFragment_to_bulletinBoardFragment"
+            app:destination="@id/bulletinBoardFragment" />
+    </fragment>
     <fragment
         android:id="@+id/aanvraagGesprekFragment"
         android:name="com.example.faithandroid.AanvraagGesprekFragment"
         android:label="aanvraag_gesprek"
-        tools:layout="@layout/aanvraag_gesprek" />
+        tools:layout="@layout/aanvraag_gesprek" >
+        <action
+            android:id="@+id/action_aanvraagGesprekFragment_to_bulletinBoardFragment"
+            app:destination="@id/bulletinBoardFragment" />
+    </fragment>
 </navigation>
