--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -29,9 +29,9 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:contentDescription="@string/app_name"
+                android:onClick="ClickMenu"
                 app:srcCompat="@drawable/ic_menu"
-                app:tint="@color/colorWhite"
-                android:onClick="ClickMenu"/>
+                app:tint="@color/colorWhite" />
 
             <TextView
                 android:id="@+id/textTitle"
@@ -41,7 +41,7 @@
                 android:text="@string/app_name"
                 android:textColor="@color/colorWhite"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
