--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,212 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomeFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+
+        <ScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/img_wolkenkrabber"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:contentDescription="@string/wolkenkrabber"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toTopOf="@id/lbl_wolkenkrabber"
+                    app:layout_constraintEnd_toStartOf="@id/img_cinema"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+                <TextView
+                    android:id="@+id/lbl_wolkenkrabber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/wolkenkrabber"
+                    app:layout_constraintBottom_toTopOf="@id/img_schatkist"
+                    app:layout_constraintEnd_toStartOf="@id/lbl_cinema"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/img_wolkenkrabber" />
+
+                <ImageView
+                    android:id="@+id/img_cinema"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:contentDescription="@string/cinema"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toTopOf="@id/lbl_cinema"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/img_wolkenkrabber"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+                <TextView
+                    android:id="@+id/lbl_cinema"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/cinema"
+                    app:layout_constraintBottom_toTopOf="@id/img_musicRoom"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/lbl_wolkenkrabber"
+                    app:layout_constraintTop_toBottomOf="@id/img_cinema" />
+
+                <ImageView
+                    android:id="@+id/img_schatkist"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:contentDescription="@string/schatkist"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toTopOf="@id/lbl_schatkist"
+                    app:layout_constraintEnd_toStartOf="@id/img_musicRoom"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_wolkenkrabber"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+                <TextView
+                    android:id="@+id/lbl_schatkist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/schatkist"
+                    app:layout_constraintBottom_toTopOf="@id/img_rugzak"
+                    app:layout_constraintEnd_toStartOf="@id/lbl_musicRoom"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/img_schatkist" />
+
+                <ImageView
+                    android:id="@+id/img_musicRoom"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:contentDescription="@string/musicRoom"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toTopOf="@id/lbl_musicRoom"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/img_schatkist"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_cinema"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+                <TextView
+                    android:id="@+id/lbl_musicRoom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/musicRoom"
+                    app:layout_constraintBottom_toTopOf="@id/img_billboard"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/lbl_schatkist"
+                    app:layout_constraintTop_toBottomOf="@id/img_musicRoom" />
+
+                <ImageView
+                    android:id="@+id/img_rugzak"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:contentDescription="@string/rugzak"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toTopOf="@id/lbl_rugzak"
+                    app:layout_constraintEnd_toStartOf="@id/img_billboard"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_schatkist"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+                <TextView
+                    android:id="@+id/lbl_rugzak"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/rugzak"
+                    app:layout_constraintBottom_toTopOf="@id/img_prikbord"
+                    app:layout_constraintEnd_toStartOf="@id/lbl_billboard"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/img_rugzak" />
+
+                <ImageView
+                    android:id="@+id/img_billboard"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:contentDescription="@string/billboard"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toTopOf="@id/lbl_billboard"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/img_rugzak"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_musicRoom"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+                <TextView
+                    android:id="@+id/lbl_billboard"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/billboard"
+                    app:layout_constraintBottom_toTopOf="@id/img_winkelcentrum"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/lbl_rugzak"
+                    app:layout_constraintTop_toBottomOf="@id/img_billboard" />
+
+                <ImageView
+                    android:id="@+id/img_prikbord"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:contentDescription="@string/prikbord"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toTopOf="@id/lbl_prikbord"
+                    app:layout_constraintEnd_toStartOf="@id/img_winkelcentrum"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_rugzak"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+                <TextView
+                    android:id="@+id/lbl_prikbord"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/prikbord"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/lbl_winkelcentrum"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/img_prikbord" />
+
+                <ImageView
+                    android:id="@+id/img_winkelcentrum"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:contentDescription="@string/winkelCentrum"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toTopOf="@id/lbl_winkelcentrum"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/img_prikbord"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_billboard"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+                <TextView
+                    android:id="@+id/lbl_winkelcentrum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:text="@string/winkelCentrum"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/img_prikbord"
+                    app:layout_constraintTop_toBottomOf="@id/img_winkelcentrum" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
