aanvraag gesprek: afgewerkt

--- a/app/src/main/res/layout/fragment_bulletinboard.xml
+++ b/app/src/main/res/layout/fragment_bulletinboard.xml
@@ -49,6 +49,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
+                    android:onClick="show_btn"
                     android:text="@string/request_consultation" />
 
                 <androidx.cardview.widget.CardView
