--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
         android:layout_height="match_parent">
 
 
+
         <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -69,7 +70,7 @@
                     android:id="@+id/img_schatkist"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
-                    android:contentDescription="@string/schatkist"
+                    android:contentDescription="@string/treasure_chest"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toTopOf="@id/lbl_schatkist"
                     app:layout_constraintEnd_toStartOf="@id/img_musicRoom"
@@ -82,7 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:text="@string/schatkist"
+                    android:text="@string/treasure_chest"
                     app:layout_constraintBottom_toTopOf="@id/img_rugzak"
                     app:layout_constraintEnd_toStartOf="@id/lbl_musicRoom"
                     app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +116,7 @@
                     android:id="@+id/img_rugzak"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
-                    android:contentDescription="@string/rugzak"
+                    android:contentDescription="@string/backpack"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toTopOf="@id/lbl_rugzak"
                     app:layout_constraintEnd_toStartOf="@id/img_billboard"
@@ -128,7 +129,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:text="@string/rugzak"
+                    android:text="@string/backpack"
                     app:layout_constraintBottom_toTopOf="@id/img_prikbord"
                     app:layout_constraintEnd_toStartOf="@id/lbl_billboard"
                     app:layout_constraintStart_toStartOf="parent"
@@ -161,7 +162,7 @@
                     android:id="@+id/img_prikbord"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
-                    android:contentDescription="@string/prikbord"
+                    android:contentDescription="@string/bulletinboard"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toTopOf="@id/lbl_prikbord"
                     app:layout_constraintEnd_toStartOf="@id/img_winkelcentrum"
@@ -174,7 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:text="@string/prikbord"
+                    android:text="@string/bulletinboard"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/lbl_winkelcentrum"
                     app:layout_constraintStart_toStartOf="parent"
