--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -40,14 +40,15 @@
         android:name="com.example.faithandroid.LoginFragment"
         android:label="LoginFragment" >
         <action
-            android:id="@+id/action_loginFragment_to_blankFragment"
-            app:destination="@id/blankFragment" />
-        <action
-            android:id="@+id/action_loginFragment_to_bulletinBoardFragment2"
+            android:id="@+id/action_loginFragment_to_bulletinBoardFragment"
             app:destination="@id/bulletinBoardFragment" />
     </fragment>
     <fragment
-        android:id="@+id/blankFragment"
-        android:name="com.example.faithandroid.BlankFragment"
-        android:label="BlankFragment" />
+        android:id="@+id/homeFragment"
+        android:name="com.example.faithandroid.HomeFragment"
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_bulletinBoardFragment"
+            app:destination="@id/bulletinBoardFragment" />
+    </fragment>
 </navigation>
