textpost opmaken + navigatie

--- a/app/src/main/res/layout/textpost.xml
+++ b/app/src/main/res/layout/textpost.xml
@@ -7,7 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
@@ -17,13 +17,13 @@
 
         <LinearLayout
             android:id="@+id/bulletinboardCard"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:fadingEdgeLength="10dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
@@ -31,7 +31,7 @@
 
                 <TextView
                     android:id="@+id/bulletinboardTittle"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
 
@@ -41,7 +41,7 @@
 
                 <TextView
                     android:id="@+id/bulletinboardInhoud"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
@@ -50,8 +50,8 @@
 
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
