homescreen afbeeldingen aangepast

--- a/app/src/main/res/layout/menu_homescherm.xml
+++ b/app/src/main/res/layout/menu_homescherm.xml
@@ -68,7 +68,7 @@
                         android:layout_height="200dp"
                         android:contentDescription="@string/cinema"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/preview"
+                        android:src="@drawable/cinema"
                         app:layout_constraintBottom_toTopOf="@id/lbl_cinema"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_wolkenkrabber"
@@ -195,7 +195,7 @@
                         android:layout_height="200dp"
                         android:contentDescription="@string/bulletinboard"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/prikbord"
+                        android:src="@drawable/bulletinboard"
                         app:layout_constraintBottom_toTopOf="@id/lbl_prikbord"
                         app:layout_constraintEnd_toStartOf="@id/img_winkelcentrum"
                         app:layout_constraintStart_toStartOf="parent"
